fix: content alignment and spacing - cta section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1186,10 +1186,20 @@ body.biencommun .cta-section p.button-container a.button:any-link {
   background-color: var(--biencommun-page-bloc-btn-bg); /* #a9997f */
 }
 
+.cta-section .default-content-wrapper p:first-child {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.cta-section .default-content-wrapper p:last-child {
+  margin-bottom: 100px;
+}
+
 @media (width>=900px) {
   .cta-section .default-content-wrapper p:first-child {
-    margin-left: 30%;
-    width: 70%;
+    margin-left: 25%;
+    width: calc((((100% - (12*30px))/12)*9) + (8 * 30px));
+    letter-spacing: 0.04em;
   }
 }
 
